--- a/profile.html
+++ b/profile.html
@@ -6,21 +6,21 @@
 <head>
 
  
-<link href="https://dl.dropboxusercontent.com/u/3191548/site/css/style.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="https://dl.dropboxusercontent.com/u/3191548/site/css/scrollbar.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="https://dl.dropboxusercontent.com/u/3191548/site/css/smoothDivScroll.css" media="screen" rel="stylesheet" type="text/css" />
-<link href="https://dl.dropboxusercontent.com/u/3191548/site/css/preloader.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="css/scrollbar.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="css/smoothDivScroll.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="css/preloader.css" media="screen" rel="stylesheet" type="text/css" />
 
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.min.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery-ui-1.8.23.custom.min.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.preloader.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/script.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.mousewheel.min.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.kinetic.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.smoothdivscroll-1.3-min.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.hoverIntent.minified.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.touchwipe.min.js"></script>
-<script type="text/javascript" src="https://dl.dropboxusercontent.com/u/3191548/site/js/jquery.tinyscrollbar.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></script>
+<script type="text/javascript" src="js/jquery.preloader.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
+<script type="text/javascript" src="js/jquery.kinetic.js"></script>
+<script type="text/javascript" src="js/jquery.smoothdivscroll-1.3-min.js"></script>
+<script type="text/javascript" src="js/jquery.hoverIntent.minified.js"></script>
+<script type="text/javascript" src="js/jquery.touchwipe.min.js"></script>
+<script type="text/javascript" src="js/jquery.tinyscrollbar.min.js"></script>
  
 
   <title> SARAHWADEY.COM </title>
@@ -52,8 +52,8 @@
       <div id="top_left_nav">
             <ul>
                 <li>
-                    <a id="home" href="/work/detail">
-                      <img src="https://dl.dropboxusercontent.com/u/3191548/site/Images/logo.png" alt="Sarah Wadey" />
+                    <a id="home" href="work/detail">
+                      <img src="Images/logo.png" alt="Sarah Wadey" />
                     </a>
                 </li>
             </ul>
@@ -61,9 +61,9 @@
 
       <div id="top_right_nav">
             <ul>             
-                <li><a id="work" href="https://dl.dropboxusercontent.com/u/3191548/site/work.html">ALL WORK</a></li>         
-                <li><a id="profile" href="https://dl.dropboxusercontent.com/u/3191548/site/profile.html">PROFILE</a></li>
-                <li><a id="contact" href="https://dl.dropboxusercontent.com/u/3191548/site/contact.html">CONTACT</a></li>
+                <li><a id="work" href="work.html">ALL WORK</a></li>         
+                <li><a id="profile" href="profile.html">PROFILE</a></li>
+                <li><a id="contact" href="contact.html">CONTACT</a></li>
             </ul>       
 
         </div> <!-- end top nav-->
@@ -151,7 +151,7 @@ $(document).ready(function() {
       <div id="picture" class="right"  >
           <br />
           <br />
-          <img src="https://dl.dropboxusercontent.com/u/3191548/site/Images/35e54ea%20copy.jpg" style="width:291px;" alt="Sarah Wadey" />
+          <img src="Images/35e54ea%20copy.jpg" style="width:291px;" alt="Sarah Wadey" />
           <div class="profile_picture_caption" >
               PHOTOGRAPHED BY TBA <br />
              
