--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <title> SARAHWADEY.COM </title>
   
   
-  <meta name="Description" content="Born in Brighton, England, Sarah was a runway model for 10 years. 
+  <meta name="Description" content="INDEX Born in Brighton, England, Sarah was a runway model for 10 years. 
         
         In 1997, Sarah decided to change her career path to advertising and focus specifically on the world of tv commercial production 
 	working for brands such as Johnny Walker, Virgin, Renault, Toyota, Playstation, British Airways and Samsung.
